--- a/src/test/resources/db.properties
+++ b/src/test/resources/db.properties
@@ -1,5 +1,5 @@
 #dataSource configure
-connection.url=jdbc:mysql://127.0.0.1:3306/cms?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+connection.url=jdbc:mysql://localhost:3306/cms?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 connection.username=root
 connection.password=root
 
