--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,7 @@
  
   <build>
   <finalName>tapestry-widgets</finalName>
+  <sourceDirectory>${sourceDirectory}</sourceDirectory>
   		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
@@ -223,6 +224,7 @@
       <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-jar-plugin</artifactId>
+           <version>2.4</version>
            <configuration>
            <archive>
              <manifestEntries>
@@ -269,5 +271,6 @@
     <hibernate.version>4.3.6.Final</hibernate.version>
     <aspectj.version>1.7.3</aspectj.version>
     <fastjson.verison>1.1.37</fastjson.verison>
+    <sourceDirectory>src/main/java</sourceDirectory>
   </properties>
 </project>
